[tool.poetry]
name = "commons_example"
version = "0.1.0"
description = "Exemplo de dados comuns"
authors = ["André Rocha <andre.rocha@enacom.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
